--- a/project-Intership/src/index.html
+++ b/project-Intership/src/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <notifier-container></notifier-container>
+  </app-root>
 </body>
 </html>
